import tensorflow test

--- a/weekendCompiler.ipynb
+++ b/weekendCompiler.ipynb
@@ -13,6 +13,7 @@
     "from dfply import *\n",
     "from datetime import datetime\n",
     "from datetime import timedelta\n",
+    "import tensorflow as tf\n",
     "\n",
     "#note: you should put in a new folder to store cached data, github doesn't push empty folders so you have to do it manually\n",
     "fastf1.Cache.enable_cache('FastF1Cache')"
