--- a/weekendCompiler.ipynb
+++ b/weekendCompiler.ipynb
@@ -14,6 +14,8 @@
     "from datetime import datetime\n",
     "from datetime import timedelta\n",
     "import tensorflow as tf\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import preprocessing\n",
     "\n",
     "#note: you should put in a new folder to store cached data, github doesn't push empty folders so you have to do it manually\n",
     "fastf1.Cache.enable_cache('FastF1Cache')"
@@ -228,6 +230,42 @@
    "source": [
     "#To export dataframe:\n",
     "masterList.to_csv(\"masterList.csv\", index = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b63740b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Cleaning For Neural Network \n",
+    "nn_copy = masterList.copy()\n",
+    "nn_copy['LapTime'] = (pd.to_numeric(nn_copy['LapTime'], errors = 'coerce')) / 1000000000\n",
+    "nn_copy['Sector1Time'] = (pd.to_numeric(nn_copy['Sector1Time'], errors = 'coerce')) / 1000000000\n",
+    "nn_copy['Sector2Time'] = (pd.to_numeric(nn_copy['Sector2Time'], errors = 'coerce')) / 1000000000\n",
+    "nn_copy['Sector3Time'] = (pd.to_numeric(nn_copy['Sector3Time'], errors = 'coerce')) / 1000000000\n",
+    "nn_copy['QualifyingLapTime'] = (pd.to_numeric(nn_copy['QualifyingLapTime'], errors = 'coerce')) / 1000000000\n",
+    "nn_copy['QualifyingSector1Time'] = (pd.to_numeric(nn_copy['QualifyingSector1Time'], errors = 'coerce')) / 1000000000\n",
+    "nn_copy['QualifyingSector2Time'] = (pd.to_numeric(nn_copy['QualifyingSector2Time'], errors = 'coerce')) / 1000000000\n",
+    "nn_copy['QualifyingSector3Time'] = (pd.to_numeric(nn_copy['QualifyingSector3Time'], errors = 'coerce')) / 1000000000\n",
+    "nn_copy['Compound'].replace(['UNKNOWN', 'TEST_UNKNOWN', 'WET', 'SOFT', 'MEDIUM', 'INTERMEDIATE', 'HARD'],\n",
+    "                               [1, 2, 3, 4, 5, 6, 7], inplace = True)\n",
+    "nn_copy['QualifyingCompound'].replace(['UNKNOWN', 'TEST_UNKNOWN', 'WET', 'SOFT', 'MEDIUM', 'INTERMEDIATE', 'HARD'],\n",
+    "                               [1, 2, 3, 4, 5, 6, 7], inplace = True)\n",
+    "nn_copy['New'] = pd.to_numeric(nn_copy['New'], errors = 'coerce')\n",
+    "\n",
+    "#Remove Unnecessary eccesary Columns \n",
+    "del nn_copy['index']\n",
+    "del nn_copy['QualifyingSector1Time']\n",
+    "del nn_copy['QualifyingSector2Time']\n",
+    "del nn_copy['QualifyingSector3Time']\n",
+    "del nn_copy['QualifyingSpeedI1']\n",
+    "del nn_copy['QualifyingSpeedI2']\n",
+    "del nn_copy['QualifyingSpeedFL']\n",
+    "del nn_copy['QualifyingSpeedST']\n",
+    "del nn_copy['Weekend']\n",
+    "nn_copy = nn_copy.dropna()"
    ]
   }
  ],
