--- a/weekendCompiler.ipynb
+++ b/weekendCompiler.ipynb
@@ -233,29 +233,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d4cb0571",
+   "metadata": {},
+   "source": [
+    "Clean Data For Neural Network"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b63740b1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Cleaning For Neural Network \n",
+    "\n",
     "nn_copy = masterList.copy()\n",
+    "\n",
+    "#Convert to Seconds \n",
     "nn_copy['LapTime'] = (pd.to_numeric(nn_copy['LapTime'], errors = 'coerce')) / 1000000000\n",
     "nn_copy['Sector1Time'] = (pd.to_numeric(nn_copy['Sector1Time'], errors = 'coerce')) / 1000000000\n",
     "nn_copy['Sector2Time'] = (pd.to_numeric(nn_copy['Sector2Time'], errors = 'coerce')) / 1000000000\n",
     "nn_copy['Sector3Time'] = (pd.to_numeric(nn_copy['Sector3Time'], errors = 'coerce')) / 1000000000\n",
-    "nn_copy['QualifyingLapTime'] = (pd.to_numeric(nn_copy['QualifyingLapTime'], errors = 'coerce')) / 1000000000\n",
-    "nn_copy['QualifyingSector1Time'] = (pd.to_numeric(nn_copy['QualifyingSector1Time'], errors = 'coerce')) / 1000000000\n",
-    "nn_copy['QualifyingSector2Time'] = (pd.to_numeric(nn_copy['QualifyingSector2Time'], errors = 'coerce')) / 1000000000\n",
-    "nn_copy['QualifyingSector3Time'] = (pd.to_numeric(nn_copy['QualifyingSector3Time'], errors = 'coerce')) / 1000000000\n",
-    "nn_copy['Compound'].replace(['UNKNOWN', 'TEST_UNKNOWN', 'WET', 'SOFT', 'MEDIUM', 'INTERMEDIATE', 'HARD'],\n",
-    "                               [1, 2, 3, 4, 5, 6, 7], inplace = True)\n",
-    "nn_copy['QualifyingCompound'].replace(['UNKNOWN', 'TEST_UNKNOWN', 'WET', 'SOFT', 'MEDIUM', 'INTERMEDIATE', 'HARD'],\n",
-    "                               [1, 2, 3, 4, 5, 6, 7], inplace = True)\n",
+    "\n",
+    "#Adjust Categorical Data\n",
+    "nn_copy['Compound'].replace(['UNKNOWN', 'TEST_UNKNOWN', 'WET', 'INTERMEDIATE', 'SOFT', 'MEDIUM', 'HARD'],\n",
+    "                               [0, 0, 0, 0, 1, 2, 3], inplace = True)\n",
+    "nn_copy['QualifyingCompound'].replace(['UNKNOWN', 'TEST_UNKNOWN', 'WET', 'INTERMEDIATE','SOFT', 'MEDIUM', 'HARD'],\n",
+    "                               [0, 0, 0, 0, 1, 2, 3], inplace = True)\n",
     "nn_copy['New'] = pd.to_numeric(nn_copy['New'], errors = 'coerce')\n",
     "\n",
-    "#Remove Unnecessary eccesary Columns \n",
+    "#Remove Bad Data\n",
     "del nn_copy['index']\n",
     "del nn_copy['QualifyingSector1Time']\n",
     "del nn_copy['QualifyingSector2Time']\n",
@@ -266,6 +274,90 @@
     "del nn_copy['QualifyingSpeedST']\n",
     "del nn_copy['Weekend']\n",
     "nn_copy = nn_copy.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a52f51a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Set training variables(X) and prediction variables (Y)\n",
+    "x = nn_copy[['LapTime',\n",
+    "             'NumberOfLaps',\n",
+    "             'NumberOfPitStops',\n",
+    "             'Sector1Time',\n",
+    "             'Sector2Time',\n",
+    "             'Sector3Time',\n",
+    "             'SpeedI1',\n",
+    "             'SpeedI2',\n",
+    "             'SpeedFL',\n",
+    "             'SpeedST',\n",
+    "             'IsPersonalBest',\n",
+    "             'Compound',\n",
+    "             'New',\n",
+    "             'AirTemp',\n",
+    "             'Humidity',\n",
+    "             'Pressure',\n",
+    "             'Rainfall',\n",
+    "             'TrackTemp',\n",
+    "             'WindSpeed',\n",
+    "             'Practice',\n",
+    "             'QualifyingCompound',\n",
+    "             'QualifyingAirTemp',\n",
+    "             'QualifyingHumidity',\n",
+    "             'QualifyingPressure',\n",
+    "             'QualifyingRainfall',\n",
+    "             'QualifyingTrackTemp',\n",
+    "             'QualifyingWindSpeed']]\n",
+    "             \n",
+    "y = nn_copy['QualifyingLapTime']\n",
+    "\n",
+    "#Normalize Training Data\n",
+    "\n",
+    "x_scaler = preprocessing.StandardScaler().fit(x)\n",
+    "x_norm = x_scaler.transform(x)\n",
+    "\n",
+    "#Split Data Into Test and Training Sets\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x_norm, y, test_size = 0.2)\n",
+    "\n",
+    "x_train = np.asarray(x_train).astype(float)\n",
+    "y_train = np.asarray(y_train).astype(float)\n",
+    "x_test = np.asarray(x_test).astype(float)\n",
+    "y_test = np.asarray(y_test).astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3188566",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Standard NN Example \n",
+    "\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(64, activation = 'relu'),\n",
+    "    tf.keras.layers.Dense(64, activation = 'relu'),\n",
+    "])\n",
+    "\n",
+    "model.compile(optimizer = 'adam', loss = tf.keras.losses.MSE, metrics = [tf.keras.metrics.MeanSquaredError(),\n",
+    "                                                                         tf.keras.metrics.MeanAbsoluteError()])\n",
+    "\n",
+    "model.fit(x_train, y_train, batch_size = 256, epochs = 1000, verbose = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b09de239",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Evaluate Model \n",
+    "model.evaluate(x_test, y_test, verbose = 2)\n",
+    "model.summary()"
    ]
   }
  ],
