--- a/weekendCompiler.ipynb
+++ b/weekendCompiler.ipynb
@@ -325,7 +325,18 @@
     "x_train = np.asarray(x_train).astype(float)\n",
     "y_train = np.asarray(y_train).astype(float)\n",
     "x_test = np.asarray(x_test).astype(float)\n",
-    "y_test = np.asarray(y_test).astype(float)"
+    "y_test = np.asarray(y_test).astype(float)\n",
+    "\n",
+    "#Split Test Data Into Validation and Test Sets\n",
+    "x_validation, x_test, y_validation, y_test = train_test_split(x_test, y_test, test_size = 0.5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a1c1bca",
+   "metadata": {},
+   "source": [
+    "\"Standard\" Neural Network Following General Guidelines "
    ]
   },
   {
@@ -335,30 +346,147 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Standard NN Example \n",
-    "\n",
+    "#One layer is generally enough for simple problems like this (As opposed to something like digit recognition)\n",
+    "#Hidden layer size is generally between the input size (number of x variables) and the output size (number of y variables)\n",
     "model = tf.keras.models.Sequential([\n",
-    "    tf.keras.layers.Dense(64, activation = 'relu'),\n",
-    "    tf.keras.layers.Dense(64, activation = 'relu'),\n",
+    "    tf.keras.layers.Dense(16, activation = 'relu'),\n",
     "])\n",
     "\n",
+    "#Adam is the recommended default optimizer\n",
+    "#Mean squared error loss function as seen in class\n",
     "model.compile(optimizer = 'adam', loss = tf.keras.losses.MSE, metrics = [tf.keras.metrics.MeanSquaredError(),\n",
     "                                                                         tf.keras.metrics.MeanAbsoluteError()])\n",
+    "#Start Batch Size Small (Powers of 2 for efficient GPU usage)\n",
+    "#Epochs rule of thumb is to start with triple the amount of columns\n",
+    "#Verbose determines how it prints the training progress\n",
+    "model.fit(x_train, y_train, batch_size = 32, epochs = 100, verbose = 2)\n",
     "\n",
-    "model.fit(x_train, y_train, batch_size = 256, epochs = 1000, verbose = 2)"
+    "#Evaluate Model \n",
+    "model.evaluate(x_validation, y_validation, verbose = 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd464f54",
+   "metadata": {},
+   "source": [
+    "What If We Adjust The Network Architecture?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b09de239",
+   "id": "f2dd5e99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Evaluate Model \n",
-    "model.evaluate(x_test, y_test, verbose = 2)\n",
-    "model.summary()"
+    "#This one is good\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(16, activation = 'relu'),\n",
+    "    tf.keras.layers.Dense(16, activation = 'relu'),\n",
+    "])\n",
+    "model.compile(optimizer = 'adam', loss = tf.keras.losses.MSE, metrics = [tf.keras.metrics.MeanSquaredError(),\n",
+    "                                                                         tf.keras.metrics.MeanAbsoluteError()])\n",
+    "model.fit(x_train, y_train, batch_size = 32, epochs = 100, verbose = 2)      \n",
+    "model.evaluate(x_validation, y_validation, verbose = 2)                                                                   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fdb0c7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This one is bad\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(16, activation = 'relu'),\n",
+    "    tf.keras.layers.Dense(16, activation = 'relu'),\n",
+    "    tf.keras.layers.Dense(16, activation = 'relu'),\n",
+    "])\n",
+    "model.compile(optimizer = 'adam', loss = tf.keras.losses.MSE, metrics = [tf.keras.metrics.MeanSquaredError(),\n",
+    "                                                                         tf.keras.metrics.MeanAbsoluteError()])\n",
+    "model.fit(x_train, y_train, batch_size = 32, epochs = 100, verbose = 2)      \n",
+    "model.evaluate(x_validation, y_validation, verbose = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07a3d37a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This one is bad\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(32, activation = 'relu'),\n",
+    "])\n",
+    "model.compile(optimizer = 'adam', loss = tf.keras.losses.MSE, metrics = [tf.keras.metrics.MeanSquaredError(),\n",
+    "                                                                         tf.keras.metrics.MeanAbsoluteError()])\n",
+    "model.fit(x_train, y_train, batch_size = 32, epochs = 100, verbose = 2)      \n",
+    "model.evaluate(x_validation, y_validation, verbose = 2)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14f33a08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This one is good\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(32, activation = 'relu'),\n",
+    "    tf.keras.layers.Dense(32, activation = 'relu'),\n",
+    "])\n",
+    "model.compile(optimizer = 'adam', loss = tf.keras.losses.MSE, metrics = [tf.keras.metrics.MeanSquaredError(),\n",
+    "                                                                         tf.keras.metrics.MeanAbsoluteError()])\n",
+    "model.fit(x_train, y_train, batch_size = 32, epochs = 100, verbose = 2)      \n",
+    "model.evaluate(x_validation, y_validation, verbose = 2)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4ba7b52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This one is bad\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(32, activation = 'relu'),\n",
+    "    tf.keras.layers.Dense(32, activation = 'relu'),\n",
+    "    tf.keras.layers.Dense(32, activation = 'relu'),\n",
+    "])\n",
+    "model.compile(optimizer = 'adam', loss = tf.keras.losses.MSE, metrics = [tf.keras.metrics.MeanSquaredError(),\n",
+    "                                                                         tf.keras.metrics.MeanAbsoluteError()])\n",
+    "model.fit(x_train, y_train, batch_size = 32, epochs = 100, verbose = 2)      \n",
+    "model.evaluate(x_validation, y_validation, verbose = 2)   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e230a15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This one is good\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(32, activation = 'relu'),\n",
+    "    tf.keras.layers.Dense(16, activation = 'relu'),\n",
+    "])\n",
+    "model.compile(optimizer = 'adam', loss = tf.keras.losses.MSE, metrics = [tf.keras.metrics.MeanSquaredError(),\n",
+    "                                                                         tf.keras.metrics.MeanAbsoluteError()])\n",
+    "model.fit(x_train, y_train, batch_size = 32, epochs = 100, verbose = 2)      \n",
+    "model.evaluate(x_validation, y_validation, verbose = 2)   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9ee1b88",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
