--- a/weekendCompiler.ipynb
+++ b/weekendCompiler.ipynb
@@ -471,7 +471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#This one is good\n",
+    "#This one is best\n",
     "model = tf.keras.models.Sequential([\n",
     "    tf.keras.layers.Dense(32, activation = 'relu'),\n",
     "    tf.keras.layers.Dense(16, activation = 'relu'),\n",
@@ -483,8 +483,78 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e59f373",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Evaluate best model with test data\n",
+    "model.evaluate(x_test, y_test)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "d9ee1b88",
+   "id": "a7496c07",
+   "metadata": {},
+   "source": [
+    "What if we change the activation function? (They are all worse than relu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf48f507",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(32, activation = 'linear'),\n",
+    "    tf.keras.layers.Dense(16, activation = 'linear'),\n",
+    "])\n",
+    "model.compile(optimizer = 'adam', loss = tf.keras.losses.MSE, metrics = [tf.keras.metrics.MeanSquaredError(),\n",
+    "                                                                         tf.keras.metrics.MeanAbsoluteError()])\n",
+    "model.fit(x_train, y_train, batch_size = 32, epochs = 100, verbose = 2)      \n",
+    "model.evaluate(x_validation, y_validation, verbose = 2)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99571dcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(32, activation = 'sigmoid'),\n",
+    "    tf.keras.layers.Dense(16, activation = 'sigmoid'),\n",
+    "])\n",
+    "model.compile(optimizer = 'adam', loss = tf.keras.losses.MSE, metrics = [tf.keras.metrics.MeanSquaredError(),\n",
+    "                                                                         tf.keras.metrics.MeanAbsoluteError()])\n",
+    "model.fit(x_train, y_train, batch_size = 32, epochs = 100, verbose = 2)      \n",
+    "model.evaluate(x_validation, y_validation, verbose = 2)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88acde6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(32, activation = 'tanh'),\n",
+    "    tf.keras.layers.Dense(16, activation = 'tanh'),\n",
+    "])\n",
+    "model.compile(optimizer = 'adam', loss = tf.keras.losses.MSE, metrics = [tf.keras.metrics.MeanSquaredError(),\n",
+    "                                                                         tf.keras.metrics.MeanAbsoluteError()])\n",
+    "model.fit(x_train, y_train, batch_size = 32, epochs = 100, verbose = 2)      \n",
+    "model.evaluate(x_validation, y_validation, verbose = 2)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76d7dcbf",
    "metadata": {},
    "source": []
   }
