--- a/weekendCompiler.ipynb
+++ b/weekendCompiler.ipynb
@@ -556,7 +556,63 @@
    "cell_type": "markdown",
    "id": "76d7dcbf",
    "metadata": {},
-   "source": []
+   "source": [
+    "What if we adjust batch size?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74418d81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This one is bad\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(32, activation = 'relu'),\n",
+    "    tf.keras.layers.Dense(16, activation = 'relu'),\n",
+    "])\n",
+    "model.compile(optimizer = 'adam', loss = tf.keras.losses.MSE, metrics = [tf.keras.metrics.MeanSquaredError(),\n",
+    "                                                                         tf.keras.metrics.MeanAbsoluteError()])\n",
+    "model.fit(x_train, y_train, batch_size = 64, epochs = 100, verbose = 0)\n",
+    "model.evaluate(x_validation, y_validation, verbose = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d007e1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This one is superior\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(32, activation = 'relu'),\n",
+    "    tf.keras.layers.Dense(16, activation = 'relu'),\n",
+    "])\n",
+    "model.compile(optimizer = 'adam', loss = tf.keras.losses.MSE, metrics = [tf.keras.metrics.MeanSquaredError(),\n",
+    "                                                                         tf.keras.metrics.MeanAbsoluteError()])\n",
+    "model.fit(x_train, y_train, batch_size = 8, epochs = 100, verbose = 0)\n",
+    "model.evaluate(x_validation, y_validation, verbose = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "050cbf6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This one is even more superior (Not going smaller because run time is very long)\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(32, activation = 'relu'),\n",
+    "    tf.keras.layers.Dense(16, activation = 'relu'),\n",
+    "])\n",
+    "model.compile(optimizer = 'adam', loss = tf.keras.losses.MSE, metrics = [tf.keras.metrics.MeanSquaredError(),\n",
+    "                                                                         tf.keras.metrics.MeanAbsoluteError()])\n",
+    "model.fit(x_train, y_train, batch_size = 4, epochs = 100, verbose = 0)\n",
+    "model.evaluate(x_validation, y_validation, verbose = 2)"
+   ]
   }
  ],
  "metadata": {
