--- a/weekendCompiler.ipynb
+++ b/weekendCompiler.ipynb
@@ -613,6 +613,32 @@
     "model.fit(x_train, y_train, batch_size = 4, epochs = 100, verbose = 0)\n",
     "model.evaluate(x_validation, y_validation, verbose = 2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c52939d",
+   "metadata": {},
+   "source": [
+    "What if we add more epochs?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8183d464",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Much better but takes a long time to train and could cause overfitting (Best model with all the data)\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(32, activation='relu'),\n",
+    "    tf.keras.layers.Dense(16, activation='relu'),\n",
+    "])\n",
+    "model.compile(optimizer='adam', loss=tf.keras.losses.MSE, metrics=[tf.keras.metrics.MeanSquaredError(),\n",
+    "                                                                   tf.keras.metrics.MeanAbsoluteError()])\n",
+    "model.fit(x_train, y_train, batch_size=4, epochs=1000, verbose=2)\n",
+    "model.evaluate(x_validation, y_validation, verbose=2)"
+   ]
   }
  ],
  "metadata": {
