--- a/weekendCompiler.ipynb
+++ b/weekendCompiler.ipynb
@@ -639,6 +639,26 @@
     "model.fit(x_train, y_train, batch_size=4, epochs=1000, verbose=2)\n",
     "model.evaluate(x_validation, y_validation, verbose=2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c3f7f23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Final Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9837079e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.evaluate(x_test, y_test, verbose=2)"
+   ]
   }
  ],
  "metadata": {
