made dummy variables for neural network

--- a/weekendCompiler.ipynb
+++ b/weekendCompiler.ipynb
@@ -222,17 +222,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0dbb292e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#To export dataframe:\n",
-    "masterList.to_csv(\"masterList.csv\", index = True)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "d4cb0571",
    "metadata": {},
@@ -249,12 +238,14 @@
    "source": [
     "\n",
     "nn_copy = masterList.copy()\n",
+    "nn_copy = pd.get_dummies(nn_copy, columns = ['Weekend', 'Driver'])\n",
     "\n",
     "#Convert to Seconds \n",
     "nn_copy['LapTime'] = (pd.to_numeric(nn_copy['LapTime'], errors = 'coerce')) / 1000000000\n",
     "nn_copy['Sector1Time'] = (pd.to_numeric(nn_copy['Sector1Time'], errors = 'coerce')) / 1000000000\n",
     "nn_copy['Sector2Time'] = (pd.to_numeric(nn_copy['Sector2Time'], errors = 'coerce')) / 1000000000\n",
     "nn_copy['Sector3Time'] = (pd.to_numeric(nn_copy['Sector3Time'], errors = 'coerce')) / 1000000000\n",
+    "nn_copy['QualifyingLapTime'] = (pd.to_numeric(nn_copy['QualifyingLapTime'], errors = 'coerce')) / 1000000000\n",
     "\n",
     "#Adjust Categorical Data\n",
     "nn_copy['Compound'].replace(['UNKNOWN', 'TEST_UNKNOWN', 'WET', 'INTERMEDIATE', 'SOFT', 'MEDIUM', 'HARD'],\n",
@@ -272,7 +263,6 @@
     "del nn_copy['QualifyingSpeedI2']\n",
     "del nn_copy['QualifyingSpeedFL']\n",
     "del nn_copy['QualifyingSpeedST']\n",
-    "del nn_copy['Weekend']\n",
     "nn_copy = nn_copy.dropna()"
    ]
   },
@@ -284,33 +274,7 @@
    "outputs": [],
    "source": [
     "#Set training variables(X) and prediction variables (Y)\n",
-    "x = nn_copy[['LapTime',\n",
-    "             'NumberOfLaps',\n",
-    "             'NumberOfPitStops',\n",
-    "             'Sector1Time',\n",
-    "             'Sector2Time',\n",
-    "             'Sector3Time',\n",
-    "             'SpeedI1',\n",
-    "             'SpeedI2',\n",
-    "             'SpeedFL',\n",
-    "             'SpeedST',\n",
-    "             'IsPersonalBest',\n",
-    "             'Compound',\n",
-    "             'New',\n",
-    "             'AirTemp',\n",
-    "             'Humidity',\n",
-    "             'Pressure',\n",
-    "             'Rainfall',\n",
-    "             'TrackTemp',\n",
-    "             'WindSpeed',\n",
-    "             'Practice',\n",
-    "             'QualifyingCompound',\n",
-    "             'QualifyingAirTemp',\n",
-    "             'QualifyingHumidity',\n",
-    "             'QualifyingPressure',\n",
-    "             'QualifyingRainfall',\n",
-    "             'QualifyingTrackTemp',\n",
-    "             'QualifyingWindSpeed']]\n",
+    "x = nn_copy >> drop(X.QualifyingLapTime)\n",
     "             \n",
     "y = nn_copy['QualifyingLapTime']\n",
     "\n",
