--- a/weekendCompiler.ipynb
+++ b/weekendCompiler.ipynb
@@ -238,7 +238,7 @@
    "source": [
     "\n",
     "nn_copy = masterList.copy()\n",
-    "nn_copy = pd.get_dummies(nn_copy, columns = ['Weekend', 'Driver'])\n",
+    "nn_copy = pd.get_dummies(nn_copy, columns = ['Weekend', 'Driver', 'Compound', 'QualifyingCompound'])\n",
     "\n",
     "#Convert to Seconds \n",
     "nn_copy['LapTime'] = (pd.to_numeric(nn_copy['LapTime'], errors = 'coerce')) / 1000000000\n",
@@ -247,11 +247,7 @@
     "nn_copy['Sector3Time'] = (pd.to_numeric(nn_copy['Sector3Time'], errors = 'coerce')) / 1000000000\n",
     "nn_copy['QualifyingLapTime'] = (pd.to_numeric(nn_copy['QualifyingLapTime'], errors = 'coerce')) / 1000000000\n",
     "\n",
-    "#Adjust Categorical Data\n",
-    "nn_copy['Compound'].replace(['UNKNOWN', 'TEST_UNKNOWN', 'WET', 'INTERMEDIATE', 'SOFT', 'MEDIUM', 'HARD'],\n",
-    "                               [0, 0, 0, 0, 1, 2, 3], inplace = True)\n",
-    "nn_copy['QualifyingCompound'].replace(['UNKNOWN', 'TEST_UNKNOWN', 'WET', 'INTERMEDIATE','SOFT', 'MEDIUM', 'HARD'],\n",
-    "                               [0, 0, 0, 0, 1, 2, 3], inplace = True)\n",
+    "#Adjust Boolean Data\n",
     "nn_copy['New'] = pd.to_numeric(nn_copy['New'], errors = 'coerce')\n",
     "\n",
     "#Remove Bad Data\n",
