--- a/weekendCompiler.ipynb
+++ b/weekendCompiler.ipynb
@@ -619,11 +619,253 @@
    "source": [
     "model.evaluate(x_test, y_test, verbose=2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e8d4c4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PlotData():\n",
+    "    \"\"\"\n",
+    "    A module for storing plot data in a more portable, reusable form\n",
+    "    Stores x and y data and metadata (title, labels, etc.)\n",
+    "    Parameters: 2 arrays of x and y datasets (to allow multiple relations per plot), \n",
+    "                plot type as a string, title, axis labels, and grid boolean\n",
+    "    \"\"\"\n",
+    "    def __init__(self, xdata, ydata, ptype='plot', title='Figure', xlabel='x axis', ylabel='y axis', grid=True):\n",
+    "        # Throws error if xdata and ydata length do not match\n",
+    "        if not len(xdata) == len(ydata):\n",
+    "            raise Exception('Data mismatch error: must have the same number of corresponding x and y fields')\n",
+    "            \n",
+    "        # Throws error if x and y subdata length do not match\n",
+    "        for i in range(len(xdata)):\n",
+    "            if not len(xdata[i]) == len(ydata[i]):\n",
+    "                raise Exception(f'Data mismatch error: {i}th set of x and y data have unequal length')\n",
+    "            \n",
+    "        self.xdata = xdata\n",
+    "        self.ydata = ydata\n",
+    "        self.ptype = ptype\n",
+    "        self.title = title\n",
+    "        self.xlabel = xlabel\n",
+    "        self.ylabel = ylabel\n",
+    "        self.grid = grid\n",
+    "        \n",
+    "        \n",
+    "    def plot(self, style='b--'):\n",
+    "        \"\"\"\n",
+    "        May not be showing it but it do be plotting the data\n",
+    "        Input: Optional style\n",
+    "        \"\"\"\n",
+    "        # Plots based on type\n",
+    "        if self.ptype == 'plot':\n",
+    "            for i in range(len(self.xdata)):\n",
+    "                plt.plot(self.xdata[i], self.ydata[i], style)\n",
+    "                \n",
+    "        elif self.ptype == 'scatter':\n",
+    "            for i in range(len(self.xdata)):\n",
+    "                plt.scatter(self.xdata[i], self.ydata[i], style)\n",
+    "            \n",
+    "        elif self.ptype == 'bar':\n",
+    "            for i in range(len(self.xdata)):\n",
+    "                plt.bar(self.xdata[i], self.ydata[i])\n",
+    "            \n",
+    "        else:\n",
+    "            print(f'{self.title} has invalid plot type')\n",
+    "                \n",
+    "        plt.title(self.title)\n",
+    "        plt.xlabel(self.xlabel)\n",
+    "        plt.ylabel(self.ylabel)\n",
+    "        if self.grid:\n",
+    "            plt.grid()\n",
+    "            \n",
+    "            \n",
+    "    def addData(x, y):\n",
+    "        \"\"\"\n",
+    "        Clears the figure and adds a new x-y relation to the data\n",
+    "        Input: x and y data to add\n",
+    "        Output: It adds the data wow\n",
+    "        \"\"\"\n",
+    "        plt.clf()\n",
+    "        self.xdata.append(x)\n",
+    "        self.ydata.append(y)\n",
+    "            \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35125264",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Plotter():\n",
+    "    \"\"\"\n",
+    "    Takes plot data and auto-generates subplots\n",
+    "    Parameters: a list of PlotData objects\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self, plots, subdim=None):\n",
+    "        self.plots = plots\n",
+    "        self.subdim = subdim\n",
+    "        self.arrange(self.subdim)\n",
+    "        self.figsize = (5*self.subdim[1], 5*self.subdim[0])\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    def addPlot(plot, loc=-1, subdim=None):\n",
+    "        \"\"\"\n",
+    "        Adds a new subplot and rearranges the figure\n",
+    "        Input: the PlotData to add, the location to display it, and a custom aspect ratio if desired\n",
+    "        Output:  It does it\n",
+    "        \"\"\"\n",
+    "        self.plots.insert(loc, plot)\n",
+    "        if not subdim == None:\n",
+    "            self.subdim = subdim\n",
+    "        else:\n",
+    "            arrange()\n",
+    "    \n",
+    "    \n",
+    "    def addData(x, y, loc):\n",
+    "        \"\"\"\n",
+    "        Adds data to a subplot\n",
+    "        Input: x and y data to add, and which subplot to add to\n",
+    "        Output: It also does it\n",
+    "        \"\"\"\n",
+    "        self.plots[loc].addData(x, y)\n",
+    "    \n",
+    "    \n",
+    "    def arrange(self, subdim=None):\n",
+    "        \"\"\"\n",
+    "        Helper function to redistrubte subplots to maximize squareness or fulfill user-set dimensions\n",
+    "        Input: Optional custom dimensions\n",
+    "        Output: :)\n",
+    "        \"\"\"\n",
+    "        if not subdim == None:\n",
+    "            # Throw error if there are not enough subplot spaces\n",
+    "            if subdim[0] * subdim[1] < len(self.plots):\n",
+    "                raise Exception('Specified plot dimensions cannot fit specidied subplot data. Try doing math')\n",
+    "            self.subdim = subdim\n",
+    "        else:\n",
+    "            # Find the arrangement closest to square that fills all subplots\n",
+    "            for i in range(int(np.sqrt(len(self.plots))), 0, -1):\n",
+    "                if len(self.plots) % i == 0:\n",
+    "                    self.subdim = (i, len(self.plots) // i)\n",
+    "                    break\n",
+    "        \n",
+    "                \n",
+    "    def plot(self):\n",
+    "        \"\"\"\n",
+    "        Generates the figure\n",
+    "        \"\"\"\n",
+    "        plt.figure(figsize=self.figsize)\n",
+    "        for i in range(len(self.plots)):\n",
+    "            plt.subplot(self.subdim[0], self.subdim[1], i + 1)\n",
+    "            self.plots[i].plot()\n",
+    "        plt.tight_layout()\n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c72b5d37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def genDrivers(weekendDF):\n",
+    "    \"\"\"\n",
+    "    Generates a dictionary of driver IDs to driver stats\n",
+    "    Input: Dataframe\n",
+    "    Output: Dictionary of driver IDs to driver stat dataframe (which is a subset of the input)\n",
+    "    \"\"\"\n",
+    "    idList = list(set(weekendDF['Driver'].values))\n",
+    "    return {ID : weekendDF.loc[weekendDF['Driver'] == ID] for ID in idList}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "539912fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getAverages(dataframe, race, driverIDs, category):\n",
+    "    \"\"\"\n",
+    "    Generates a list of average values for a driver stat in a given race\n",
+    "    Input: Dictionary of races to dictionaries of IDs to driver dataframes, the race to \n",
+    "           select, the driver to select, and the driver stat to average\n",
+    "    Output: The mean value\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    averages = []\n",
+    "    for ID in driverIDs:\n",
+    "        # If the driver is not present they get 0\n",
+    "        try:\n",
+    "            averages.append(dataframe[race][ID][category].values.mean().item() / 1.0e9)\n",
+    "        except:\n",
+    "            averages.append(0)\n",
+    "    return averages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df5b42e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Trim down to just the data we're interested in\n",
+    "categories = ['Driver', 'LapTime', 'Sector1Time', 'Sector2Time','Sector3Time', 'Compound', 'QualifyingLapTime', \n",
+    "          'QualifyingSector1Time', 'QualifyingSector2Time','QualifyingSector3Time', 'QualifyingCompound', 'Weekend']\n",
+    "plotDF = masterList[categories].copy()\n",
+    "\n",
+    "# Split data into a dictionary by race\n",
+    "raceNames = [race[0] for race in raceCalendar.values()]\n",
+    "raceDFs = {race : plotDF.loc[plotDF[\"Weekend\"] == race] for race in raceNames}\n",
+    "\n",
+    "# Split dictionary of races further into to dictionaries of driver IDs to driver data\n",
+    "# Get a specific datafield with raceDrivers['raceName']['driverID']['field'].values\n",
+    "raceDrivers = {name : genDrivers(raceDFs[name]) for name in raceNames}\n",
+    "\n",
+    "# Set chosen races and make sorted list of driver IDs\n",
+    "selectedRaces = [raceNames[6], raceNames[9], raceNames[15], raceNames[18]]\n",
+    "#selectedRaces = raceNames\n",
+    "driverIDs = list(set([int(ID) for ID in plotDF['Driver'].values]))\n",
+    "driverIDs.sort()\n",
+    "driverIDs = [str(ID) for ID in driverIDs]\n",
+    "\n",
+    "# Collect average practice lap time and average qualifying lap time for each selected race\n",
+    "lapAverages, qualifyingAverages = [], []\n",
+    "for race in selectedRaces:\n",
+    "    lapAverages.append(getAverages(raceDrivers, race, driverIDs, 'LapTime'))\n",
+    "    qualifyingAverages.append(getAverages(raceDrivers, race, driverIDs, 'QualifyingLapTime'))\n",
+    "\n",
+    "# Auto-generate plots\n",
+    "xDataSets = [[j for j in range(len(lapAverages[i]))] for i in range(2)]\n",
+    "lapPlotData = [PlotData(xDataSets, [lapAverages[i], qualifyingAverages[i]], 'bar', selectedRaces[i], 'Time', 'Driver') for i in range(len(lapAverages))]\n",
+    "plotter = Plotter(lapPlotData)\n",
+    "plotter.plot()\n",
+    "plt.savefig('plots.png')\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77984506",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -637,7 +879,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "2a8dfe095fce2b5e88c64a2c3ee084c8e0e0d70b23e7b95b1cfb538be294c5c8"
+   }
   }
  },
  "nbformat": 4,
