Added more autoplotting infrastructure Added one-shot neural network generator (idk if it good tho)

--- a/weekendCompiler.ipynb
+++ b/weekendCompiler.ipynb
@@ -623,6 +623,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "65fd4245",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def genModel(layers, batchSize=32, epochs=100, verbose=2):\n",
+    "    \"\"\"\n",
+    "    Automated neural network generator\n",
+    "    Input: list of layers, batch size, number of epochs, verbosity\n",
+    "    Output: it do the thing\n",
+    "    \"\"\"\n",
+    "    model = tf.keras.models.Sequential(layers)\n",
+    "    model.compile(optimizer='adam', loss=tf.keras.losses.MSE, metrics=[tf.keras.metrics.MeanSquaredError(),\n",
+    "                                                                   tf.keras.metrics.MeanAbsoluteError()])\n",
+    "    model.fit(x_train, y_train, batchSize, epochs, verbose)\n",
+    "    model.evaluate(x_validation, y_validation, verbose)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9e8d4c4b",
    "metadata": {},
    "outputs": [],
@@ -635,14 +656,18 @@
     "                plot type as a string, title, axis labels, and grid boolean\n",
     "    \"\"\"\n",
     "    def __init__(self, xdata, ydata, ptype='plot', title='Figure', xlabel='x axis', ylabel='y axis', grid=True):\n",
-    "        # Throws error if xdata and ydata length do not match\n",
-    "        if not len(xdata) == len(ydata):\n",
-    "            raise Exception('Data mismatch error: must have the same number of corresponding x and y fields')\n",
+    "        \n",
+    "        # Only check these if we have ydata\n",
+    "        if ydata != None:\n",
+    "            # Throws error if xdata and ydata length do not match\n",
+    "            if not len(xdata) == len(ydata):\n",
+    "                raise Exception('Data mismatch error: must have the same number of corresponding x and y fields')\n",
     "            \n",
-    "        # Throws error if x and y subdata length do not match\n",
-    "        for i in range(len(xdata)):\n",
-    "            if not len(xdata[i]) == len(ydata[i]):\n",
-    "                raise Exception(f'Data mismatch error: {i}th set of x and y data have unequal length')\n",
+    "            # Throws error if x and y subdata length do not match\n",
+    "                for i in range(len(xdata)):\n",
+    "                    if not len(xdata[i]) == len(ydata[i]):\n",
+    "                        raise Exception(f'Data mismatch error: {i}th set of x and y data have unequal length')\n",
+    "        \n",
     "            \n",
     "        self.xdata = xdata\n",
     "        self.ydata = ydata\n",
@@ -670,6 +695,9 @@
     "        elif self.ptype == 'bar':\n",
     "            for i in range(len(self.xdata)):\n",
     "                plt.bar(self.xdata[i], self.ydata[i])\n",
+    "                \n",
+    "        elif self.ptype == 'boxplot':\n",
+    "            plt.boxplot(self.xdata)\n",
     "            \n",
     "        else:\n",
     "            print(f'{self.title} has invalid plot type')\n",
@@ -783,7 +811,7 @@
     "    Output: Dictionary of driver IDs to driver stat dataframe (which is a subset of the input)\n",
     "    \"\"\"\n",
     "    idList = list(set(weekendDF['Driver'].values))\n",
-    "    return {ID : weekendDF.loc[weekendDF['Driver'] == ID] for ID in idList}"
+    "    return {ID : weekendDF.loc[weekendDF['Driver'] == ID] for ID in idList}\n"
    ]
   },
   {
@@ -808,7 +836,7 @@
     "            averages.append(dataframe[race][ID][category].values.mean().item() / 1.0e9)\n",
     "        except:\n",
     "            averages.append(0)\n",
-    "    return averages"
+    "    return averages\n"
    ]
   },
   {
@@ -821,37 +849,23 @@
     "# Trim down to just the data we're interested in\n",
     "categories = ['Driver', 'LapTime', 'Sector1Time', 'Sector2Time','Sector3Time', 'Compound', 'QualifyingLapTime', \n",
     "          'QualifyingSector1Time', 'QualifyingSector2Time','QualifyingSector3Time', 'QualifyingCompound', 'Weekend']\n",
-    "plotDF = masterList[categories].copy()\n",
+    "plotDataFrame = masterList.copy()\n",
     "\n",
     "# Split data into a dictionary by race\n",
     "raceNames = [race[0] for race in raceCalendar.values()]\n",
-    "raceDFs = {race : plotDF.loc[plotDF[\"Weekend\"] == race] for race in raceNames}\n",
+    "raceDataFrames = {race : plotDataFrame.loc[plotDataFrame[\"Weekend\"] == race] for race in raceNames}\n",
     "\n",
     "# Split dictionary of races further into to dictionaries of driver IDs to driver data\n",
-    "# Get a specific datafield with raceDrivers['raceName']['driverID']['field'].values\n",
-    "raceDrivers = {name : genDrivers(raceDFs[name]) for name in raceNames}\n",
+    "# Get a specific stat with driverDataFrames['raceName']['driverID']['field'].values\n",
+    "driverDataFrames = {name : genDrivers(raceDataFrames[name]) for name in raceNames}\n",
     "\n",
-    "# Set chosen races and make sorted list of driver IDs\n",
-    "selectedRaces = [raceNames[6], raceNames[9], raceNames[15], raceNames[18]]\n",
-    "#selectedRaces = raceNames\n",
+    "# Make sorted list of driver IDs\n",
     "driverIDs = list(set([int(ID) for ID in plotDF['Driver'].values]))\n",
     "driverIDs.sort()\n",
     "driverIDs = [str(ID) for ID in driverIDs]\n",
     "\n",
-    "# Collect average practice lap time and average qualifying lap time for each selected race\n",
-    "lapAverages, qualifyingAverages = [], []\n",
-    "for race in selectedRaces:\n",
-    "    lapAverages.append(getAverages(raceDrivers, race, driverIDs, 'LapTime'))\n",
-    "    qualifyingAverages.append(getAverages(raceDrivers, race, driverIDs, 'QualifyingLapTime'))\n",
-    "\n",
-    "# Auto-generate plots\n",
-    "xDataSets = [[j for j in range(len(lapAverages[i]))] for i in range(2)]\n",
-    "lapPlotData = [PlotData(xDataSets, [lapAverages[i], qualifyingAverages[i]], 'bar', selectedRaces[i], 'Time', 'Driver') for i in range(len(lapAverages))]\n",
-    "plotter = Plotter(lapPlotData)\n",
-    "plotter.plot()\n",
-    "plt.savefig('plots.png')\n",
-    "    \n",
-    "\n"
+    "# Select races to plot\n",
+    "selectedRaces = raceNames\n"
    ]
   },
   {
@@ -860,7 +874,78 @@
    "id": "77984506",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def getDataField(field):\n",
+    "    \"\"\"\n",
+    "    Takes a field name and produces a dictionary of races to dictionaries of drivers to numpy arrays of driver data\n",
+    "    \"\"\"\n",
+    "    dataField = {}\n",
+    "    buffer = {}\n",
+    "    \n",
+    "    for race in selectedRaces:\n",
+    "        for ID in driverIDs:\n",
+    "            try:\n",
+    "                arr = driverDataFrames[race][ID][field].values\n",
+    "                if arr.dtype == 'timedelta64[ns]':\n",
+    "                    buffer[ID] = arr.astype('float64') / 1e9\n",
+    "                else:\n",
+    "                    buffer[ID] = arr\n",
+    "            except:\n",
+    "                buffer[ID] = np.array([0])\n",
+    "                \n",
+    "        dataField[race] = buffer.copy()\n",
+    "        buffer.clear()\n",
+    "        \n",
+    "    return dataField\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f97c2ab9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plotField(field, saveName=None):\n",
+    "    \"\"\"\n",
+    "    Given a field name, generates boxplots for that field for each driver across each race, optionally saves an image\n",
+    "    \"\"\"\n",
+    "    lapTimes = getDataField(field)\n",
+    "    fieldPlotData = []\n",
+    "\n",
+    "    for race, driverData in lapTimes.items():\n",
+    "        raceData = [driverField for driverField in driverData.values()]\n",
+    "        title = f'{field} of drivers in {race}'\n",
+    "        fieldPlotData.append(PlotData(raceData, None, 'boxplot', title, 'Drivers', field))\n",
+    "        \n",
+    "    plotter = Plotter(fieldPlotData)\n",
+    "    plotter.plot()\n",
+    "    \n",
+    "    if saveName != None:\n",
+    "        plt.savefig(saveName)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6daec051",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plots and saves each dataframe field\n",
+    "# FIXME: plots for some races are mostly blank or show negative values?\n",
+    "timeFields = ['LapTime', 'Sector1Time', 'Sector2Time','Sector3Time']\n",
+    "speedFields = ['SpeedI1', 'SpeedI2', 'SpeedFL', 'SpeedST']\n",
+    "environmentFields = ['AirTemp', 'Humidity', 'Pressure', 'TrackTemp', 'Windspeed']\n",
+    "\n",
+    "qtimeFields = ['QualifyingLapTime', 'QualifyingSector1Time', 'QualifyingSector2Time','QualifyingSector3Time']\n",
+    "qspeedFields = ['QualifyingSpeedI1', 'QualifyingSpeedI2', 'QualifyingSpeedFL', 'QualifyingSpeedST']\n",
+    "\n",
+    "for field in speedFields:\n",
+    "    plotField(field, field + 'BoxPlots.png')\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
