--- a/capstone-project.ipynb
+++ b/capstone-project.ipynb
@@ -157,6 +157,7 @@
     "                     >> mutate(LapTime = X.LapTime/timedelta(seconds = 1)) >> mutate(Sector1Time = X.Sector1Time/timedelta(seconds = 1)) \\\n",
     "                     >> mutate(Sector2Time = X.Sector2Time/timedelta(seconds = 1)) >> mutate(Sector3Time = X.Sector3Time/timedelta(seconds = 1))\n",
     "    \n",
+    "    #Removed incredibly slow times that aren't representative of race-pace (1.14 figure explained in write-up)\n",
     "    fastestTime = FPCompiledTiming['LapTime'].min()\n",
     "    FPCompiledTiming = FPCompiledTiming.reset_index()\n",
     "    for index in range(len(FPCompiledTiming)):\n",
